* ZX Spectrum: поддержка 2 AY по схеме NedoPC Turbo Sound
* ZX Spectrum: возможность отключить AY для конфигурации 48К
- ZX Spectrum: исправлено декодирование порта 7FFD, устранено зависание некоторых программ
+ ZX Spectrum: добавлена конфигурация для Pentagon 128K, реализованы корректные тайминги для этой модели


Изменения в версии 4.0.521:

- Специалист: в комплект эмулятора добавлен отсутствовавший файл ROM SDOS
- Z80: исправлена работа регистра R, восстановлена работоспособность игр Twinz и др. на ZX Spectrum
- Для SD-адаптера по схеме HWM_PVV сейчас корректно эмулируется сигнал Ready
- Специалист: восстановлена корректная загрузка и запуск файлов с помощью встроенного
  загрузчика в конфигурации с SD-контроллером по схеме Vinxru
- Специалист: опция "Не воспроизводить звук магнитофона" сейчас установлена по умолчанию
  для исключения посторонних звуков при работе программ, использующих 8-цветный режим


Изменения в версии 4.0.520:

+ Добавлена базовая поддержка ZX Spectrum 48K и 128K
+ Новый механизм связывания объектов в конфигурационных файлах (connect)
+ Добавлена поддержка пользовательских glsl-шейдеров
+ Разработан шейдер bwcrt, имитирующий черно-белый телевизор,
  также в комплект эмулятора добавлены несколько готовых шейдеров,
  портированных из других источников
+ Новая опция окна "Серый фон". Фон окна сейчас выключен по умолчанию
+ Новая опция "Убрать цвет" для принудительного вывода цветного изображения
  в градациях серого (кроме пользовательских шейдеров)
+ Специалист: конфигурация с SD-контроллером по схеме vinxru
+ Специалист: новая конфигурация для Специслиста с SD-адаптером по схеме HWM PVV и SDOS.
+ Возможность ограничить в настройках перечень предалагаемых платформ
+ Добавлена опция переключения пользовательского интерфейса на платформо-независимый стиль Fusion
  (может быть необходим для использования темной темы оформления)
* Режим смешивания полукадров сейчас работает с учетом гаммы sRGB, старое поведение выделено в отдельную опцию