@@ -29,6 +29,10 @@ endif
 # https://zx-pk.ru/threads/35812-ot-chjornogo-k-belomu-(skhema-kod).html
 #define PIXELTRON
 
+# Использовать схему ramfont
+# https://zx-pk.ru/threads/36206-ramfont-ruslana-alikberova-(skhema-kod).html
+#define RAMFONT
+
 
 ifndef CFG_SD_TYPE
   @CFG_SD_TYPE = HWMPVV
@@ -213,9 +217,13 @@ ifdef TIMER
 endif
 
 ifndef PIXELTRON
-  Rk86Renderer crtRenderer
-  crtRenderer.altFont = @FONT
-  crtRenderer.altRenderer = no
+  ifndef RAMFONT
+    Rk86Renderer crtRenderer
+    crtRenderer.altFont = @FONT
+    crtRenderer.altRenderer = no
+  else
+    RkRamFontRenderer crtRenderer
+  endif
 else
   RkPixeltronRenderer crtRenderer
 endif
