@@ -55,12 +55,14 @@
       G7400&lt;Enter&gt;». Для выбора файла образа ROM-диска используется
       комбинация клавиш Alt-F8 (Meta-F8) или соответствующая кнопка на панели
       инструментов.</p>
-    <h3>Конфигурация со схемой PIXELTRON</h3>
+    <h3>Конфигурация со схемами PIXELTRON и RAMFONT</h3>
     <p>В эмуляторе реализована возмржность работы со схемой знакогенератора
-      PIXELTRON (<a href="https://zx-pk.ru/threads/35812-ot-chjornogo-k-belomu-%28skhema-kod%29.html">https://zx-pk.ru/threads/35812-ot-chjornogo-k-belomu-(skhema-kod).html</a>).
-      В настоящее время возмржность включения этой конфигурации через
+      PIXELTRON (<a href="https://zx-pk.ru/threads/35812-ot-chjornogo-k-belomu-%28skhema-kod%29.html">https://zx-pk.ru/threads/35812-ot-chjornogo-k-belomu-(skhema-kod).html</a>),
+      а также со схемой загрузки знакогенератора RAMFONT (<a href="https://zx-pk.ru/threads/36206-ramfont-ruslana-alikberova-%28skhema-kod%29.html">https://zx-pk.ru/threads/36206-ramfont-ruslana-alikberova-(skhema-kod).html</a>)
+      В настоящее время возможность включения этих конфигураций через
       пользовательский интерфейс отсутствует, для включения необходимо
-      раскомментировать строчку #define PIXELTRON в файле rk86/rk86.conf.</p>
+      раскомментировать строчку #define PIXELTRON либо #define RAMFONT в файле
+      rk86/rk86.conf.</p>
     <h3>Соответствие клавиш и раскладки клавиатуры</h3>
     <p>По умолчанию для РК-86 установлена «Умная» раскладка клавиатуры, ввод
       буквенно-цифровых символов при этом производится как обычно, раскладка
