@@ -24,7 +24,7 @@
 
 #define VER_MAJOR 4
 #define VER_MINOR 0
-#define VER_BUILD 532
+#define VER_BUILD 533
 
 #define VER_STR XSTR(VER_MAJOR) "." XSTR(VER_MINOR) "." XSTR(VER_BUILD)
 #define VER_COMMA_SEP VER_MAJOR,VER_MINOR,VER_BUILD
