@@ -15,6 +15,8 @@
 * ZX Spectrum: возможность отключить AY для конфигурации 48К
 - ZX Spectrum: исправлено декодирование порта 7FFD, устранено зависание некоторых программ
 + ZX Spectrum: добавлена конфигурация для Pentagon 128K, реализованы корректные тайминги для этой модели
++ РК-86: добавлена реализация схемы RAMFONT, включается в конфигурационном файле (см. справку по платформе)
+  https://zx-pk.ru/threads/36206-ramfont-ruslana-alikberova-(skhema-kod).html
 
 
 Изменения в версии 4.0.521:
